@@ -108,6 +108,10 @@ the application to be opened again.</td>
 <td>Groups list in Add/Edit dialog box no longer "remembers" groups from previously opened database.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3058043);return false;">3058043</a></td>
+<td>Hexadecimal password policy now correctly saved.</td>
+</tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Spanish translations for installer and application updated - thanks to Jose.</td>
 </tr>
